--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
-# These individuals contributed to the hbnb project in this repository
+# These individuals contributed to the hbnb project in this repository .
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-Innocent Christian Mhango <111076892+i-christian@users.noreply.github.com>
+Mzwandile Aaron Sithebe <sithebemzwandie40@gmail.com>
