--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# These individuals contributed to the hbnb project in this repository .
+# These individuals contributed to the hbnb project in this repository
 
 Mzwandile Aaron Sithebe <sithebemzwandie40@gmail.com>
